# unifyroute

./: .gitignore  MASTER_PLAN.md  MIGRATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run-tests.sh  unifyroute
.agents/workflows/: run-tests.md
api-gateway/: pyproject.toml
api-gateway/src/api_gateway/: main.py
api-gateway/src/api_gateway/routes/: admin.py  brain.py  chat.py  completions.py  model_catalog.py  models.py  oauth.py  seeds.py
brain/src/brain/: config.py  health.py
data/: unifyroute.db
docs/: CODE_OF_CONDUCT.md  GETTING_STARTED.md  SECURITY.md  SUPPORT.md  architecture.md  installation.md  llmway-architecture.md  progress-and-todo.md  usage.md
docs/brain/: implementation-plan.md  task.md  walkthrough.md
gui/: package-lock.json
gui/src/: App.tsx  index.css
gui/src/components/: mode-toggle.tsx
gui/src/lib/: api.ts
gui/src/pages/: Chat.tsx  Logs.tsx  Models.tsx  Providers.tsx  RoutingStrategy.tsx  Settings.tsx
launcher/: pyproject.toml
launcher/src/launcher/: main.py  scheduler.py
migrations/versions/: 001_full_schema.py  e462297b3a9e_add_systemevent_table.py
quota-poller/src/quota_poller/: main.py
router/: routing.yaml
router/src/router/: quota.py
router/src/router/adapters/: __init__.py  base.py  compat_adapters.py
scripts/: list-logs.py  setup.py  wizard.py
selfheal/: pyproject.toml
selfheal/src/selfheal/: __init__.py  adaptive_cooldown.py  health_prober.py  incident_tracker.py
shared/: pyproject.toml
shared/src/shared/: database.py  events.py  logging_config.py  models.py
tests/: conftest.py  e2e_setup.py  test_brain.py  test_completions.py  test_e2e_flow.py  test_gateway_keys.py  test_openrouter.py  test_providers.py  test_quota_pollers.py  test_router_core.py  test_wizard_api.py
