[project]
name = "unifyroute-workspace"
version = "0.1.0"
description = "A monorepo for the UnifyRoute project"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "shared",
    "credential-vault",
    "api-gateway",
    "router",
    "quota-poller",
    "launcher",
    "brain",
    "selfheal",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
