[project]
name = "launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Architect Subagent", email = "architect@openclaw.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10,<3.13",
    "api-gateway",
    "apscheduler>=3.11.2",
    "credential-vault",
    "fastapi>=0.115.0",
    "quota-poller",
    "router",
    "selfheal",
    "shared",
    "uvicorn>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
api-gateway = { workspace = true }
credential-vault = { workspace = true }
quota-poller = { workspace = true }
shared = { workspace = true }
router = { workspace = true }
selfheal = { workspace = true }
