[project]
name = "shared"
version = "0.1.0"
description = "Shared models, schemas, and utilities for UnifyRoute"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "cryptography>=43.0.1",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
